--- a/hs-sounds.cabal
+++ b/hs-sounds.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dcce5bfe4d9fc8ae1f96b486e47ef18eb04f6d56638657dcaacad892a7f480aa
+-- hash: 303f9fc5957994f3a540fc02ea4e1da81fa7596718aabd45452d7e25ee5cf1e8
 
 name:           hs-sounds
 version:        0.1.0.0
@@ -34,6 +34,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , process
   default-language: Haskell2010
 
 executable hs-sounds-exe
@@ -45,7 +47,9 @@ executable hs-sounds-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hs-sounds
+    , process
   default-language: Haskell2010
 
 test-suite hs-sounds-test
@@ -58,5 +62,7 @@ test-suite hs-sounds-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
     , hs-sounds
+    , process
   default-language: Haskell2010
